docs: add Google Search

--- a/introduction/rootchain_intro/public/index.html
+++ b/introduction/rootchain_intro/public/index.html
@@ -10,6 +10,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    <!-- Google Search Console -->
+    <meta name="google-site-verification" content="mbLQGecNIXL7juKPh0ol8TU05JqeNPqWnPTaq8-6H9E" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!--
